<resources>
    <string name="app_name">RedPen</string>
    <string name="parent_login">Parent Login</string>
    <string name="teacher_login">Teacher Login</string>
    <string name="student_login">Student Login</string>
    <string name="logo">logo</string>
    <string name="username">Username</string>
    <string name="teacher_username">teacher username</string>
    <!-- <string name="teacher_login">Teacher Login</string> -->
    <string name="login">Login</string>
    <!-- <string name="username">Username</string> -->
    <string name="password">password</string>
    <string name="teacher_logged_in">Teacher Logged In</string>
    <string name="student_logged_in">Student Logged In</string>
</resources>